# semk-blog

./: 404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
2025/10/04/on-different-interpretations-of-the-class-weighting-and-notion-of-unbalanced-classes/: index.html
2025/10/09/what-is-the-weather-and-can-it-be-predicted/: index.html
2025/10/16/car-rental-problem/: index.html
2025/10/17/can-a-continuous-on-mathbbr-function-be-a-reverse-for-everywhere-discontinuous-function-on-the-segment/: index.html
car_rental/: components.py  components_adv.py
car_rental/sutton/: config.yaml
docs/: .authors.yml  index.md
docs/posts/car_rental/: .gitignore  car_rental.ipynb  car_rental.md  car_rental_ready_data.ipynb  components.py  problem_config.yaml
docs/posts/car_rental/sutton/: config.yaml
docs/posts/car_rental/sutton/assets/: policy_adv.json  value.json
docs/posts/car_rental/symmetric/: config.yaml
docs/posts/continuous_inverse_for_discontinuous/: continuous_inverse_for_discontinuous.md
docs/posts/unbalanced_classes/: .gitignore  unbalanced_classes.md
docs/posts/weather_overview/: weather_overview.md
posts/car_rental/sutton/assets/: policy.json  value_adv.json
posts/unbalanced_classes/graphs/: dataset.json  mixed_dataset.json  ml_model.json  ml_model_balanced.json  models_comparasion.json
