[project]
name = "kirill-semkin-blog"
version = "0.1.0"
description = "My personal blog"
authors = [
    {name = "Semkin Kirill"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.20,<10.0.0)",
    "mkdocs-plotly-plugin (>=0.1.3,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
